Bug 426582 - [Wayland] Wacom tablet cannot interact with Dolphin files
Summary: [Wayland] Wacom tablet cannot interact with Dolphin files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-16 03:04 UTC by Thiago Sueto
Modified: 2020-09-26 18:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Sueto 2020-09-16 03:04:10 UTC
SUMMARY
When attempting to use Dolphin with a Wacom tablet, the majority of the interface (files, folders, sidebar) is impossible to interact with.

* No matter if Wayland or XWayland
    * Doesn't work with normal folder/files
    * Doesn't work with sidebar folders
* Interaction with buttons and text fields work    
* Works on Nautilus flatpak, no matter if Wayland or XWayland
* Works on Kdialog

STEPS TO REPRODUCE
1. Login to a Plasma Wayland session
2. Open Dolphin
3. Try clicking or selecting files on Dolphin

OBSERVED RESULT
Impossible to interact with files and folders

EXPECTED RESULT
Normal interaction with files and folders

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20200823 (build from 2020-09-14)
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.8.0-1-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 620

ADDITIONAL INFORMATION
Wacom Tablet: Intuos CTL480 Pen Small
Properly recognized via libinput list-devices

Device:           Wacom Intuos S Pad
Kernel:           /dev/input/event2
Group:            6
Seat:             seat0, default
Capabilities:     tablet-pad
Tap-to-click:     n/a
Tap-and-drag:     n/a
Tap drag lock:    n/a
Left-handed:      n/a
Nat.scrolling:    n/a
Middle emulation: n/a
Calibration:      n/a
Scroll methods:   none
Click methods:    none
Disable-w-typing: n/a
Accel profiles:   n/a
Rotation:         n/a

Device:           Wacom Intuos S Pen
Kernel:           /dev/input/event1
Group:            6
Seat:             seat0, default
Size:             152x95mm
Capabilities:     tablet 
Tap-to-click:     n/a
Tap-and-drag:     n/a
Tap drag lock:    n/a
Left-handed:      n/a
Nat.scrolling:    n/a
Middle emulation: n/a
Calibration:      n/a
Scroll methods:   none
Click methods:    none
Disable-w-typing: n/a
Accel profiles:   none
Rotation:         n/a
Comment 1 David Edmundson 2020-09-16 08:02:58 UTC
You say "doesn't matter if wayland or xwayland" how does it react in X?
Comment 2 Thiago Sueto 2020-09-16 12:13:52 UTC
Oh, that's true, my mistake (I was testing and noting on Kate). It's the only of the five bugs that behaves the same in X.
Comment 3 David Edmundson 2020-09-16 12:48:08 UTC
In that case it's a dolphin bug - I guess QGraphicsView doesn't have the synthetesised event handling.
Comment 4 Nate Graham 2020-09-16 17:09:55 UTC
I wonder if it works now that touch support was just added to Dolphin. That happened yesterday, so maybe you were using an older build?
Comment 5 Thiago Sueto 2020-09-16 23:36:07 UTC
(In reply to Nate Graham from comment #4)
> I wonder if it works now that touch support was just added to Dolphin. That
> happened yesterday, so maybe you were using an older build?

Hello, I updated just now.

The reported lack of interaction still exists, and now I have additional behavior: long press with the pen (I mean stylus btw) allows me to select a file/folder, and clicking elsewhere opens the context menu to move or copy it. Long pressing does the same. Oddly enough, it only happens with the first file you long press. Any subsequent attempts simply call the context menu for the same file. Long pressing other files results in the same thing.
Comment 6 Bug Janitor Service 2020-09-19 07:58:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/64
Comment 7 Elvis Angelaccio 2020-09-26 14:54:02 UTC
Git commit 81cf9f0375c937b973900dce0979d9218d9960ee by Elvis Angelaccio, on behalf of Steffen Hartleib.
Committed on 26/09/2020 at 14:53.
Pushed by elvisangelaccio into branch 'master'.

Allow interaction with folder/files with the stylus again

This Patch works for Wayland and X.

M  +19   -7    src/kitemviews/kitemlistcontroller.cpp
M  +2    -1    src/kitemviews/kitemlistcontroller.h
M  +1    -0    src/kitemviews/kitemlistview.cpp
M  +4    -1    src/kitemviews/private/ktwofingertap.cpp

https://invent.kde.org/system/dolphin/commit/81cf9f0375c937b973900dce0979d9218d9960ee