Allow interaction with folder/files with the stylus again

This Patch works for Wayland and X.

BUG: 426582